styles/app.css
/* ... */
.footer {
    background: #0F172A;
}

.footer .container {
    display: flex;
    justify-content: space-between;
    padding: 50px 0;
    gap: 50px;
}

.footer__brand {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 34px;
    max-width: 300px;
}

.footer__logo {
    font-size: 34px;
    font-weight: 500;
    color: #f5f5f5;
}

.footer__description {
    font-size: 18px;
    color: #c5c5c5;
}

.footer__socials {
    display: flex;
    align-items: center;
    gap: 30px;
}

.footer-icon {
    width: 32px;
    height: 32px;
    color: #e7e7e7;
    transition: 0.5s;
}

.footer-icon:hover {
    transform: scale(1.05);
    color: #D4A373;
}

.footer__heading {
    font-size: 18px;
    font-weight: 500;
    color: #D4A373;
}

.footer__navigation {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 24px;
    flex-basis: 300px;

}

.footer__list {
    display: flex;
    flex-direction: column;
    justify-content: center;
    list-style: none;
    gap: 15px;
}

.footer__link {
    font-size: 18px;
    color: #c8c5c5;
    position: relative;
    display: inline-block;
    min-width: 120px;
    transition: color 0.6s ease, transform 0.6s ease;
}

.footer__link::before {
    content: '';
    position: absolute;
    left: -20px;
    top: 50%;
    width: 0;
    height: 2px;
    background: currentColor;
    transform: translateY(-50%);
    transition: width 0.3s ease, color 0.3s ease;
}

.footer__link:hover {
    transform: translateX(8px);
    color: #D4A373;
}

.footer__link:hover::before {
    width: 18px;
}

.footer__categories {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 24px;
    flex-basis: 300px;
}

.footer__popular-posts {
    display: flex;
    justify-content: center;
    flex-direction: column;
    gap: 15px;
    flex-basis: 300px;
}

.footer-post-link {
    display: flex;
    align-items: center;
    gap: 15px;
}

.footer-post__image {
    width: 50px;
    height: 50px;
    border-radius: 6px;
}

.footer-post__content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 5px;
}

.footer-post__title {
    color: #e7e7e7;
    font-size: 14px;
    font-weight: 600;
}

.footer-post__date {
    color: #c5c5c5;
    font-size: 12px;
    font-weight: 400;
}

.footer-bottom {
    border-top: 1px solid rgba(255, 255, 255, 0.9);
    width: 100%;
    max-width: 1200px;
    margin-inline: auto;
    padding-inline: 20px;
    padding-top: 1rem;
    padding-bottom: 0.5rem;
    text-align: center;
}

.footer-bottom-copyright {
    font-size: 0.875rem;
    color: #f5f5f5;
}

@media (max-width: 768px) {
    .hero {
        background-position: 70% center;
    }

    .container {
        max-width: 730px;
    }

    .hero-content {
        padding: 30px 0;
        gap: 20px;
    }

    .hero-title {
        font-size: 40px;
        margin-top: 2px;
        max-width: 320px;
        line-height: 48px;
    }

    .hero-description {
        font-size: 18px;
        line-height: 26px;
        margin-top: -10px;
    }

    .hero-btn {
        width: 200px;
        margin-top: 136px;
    }

    .icon-arrow-right {
        width: 36px;
        height: 36px;
    }

    .articles-grid {
        grid-template-columns: repeat(2, 1fr);
    }

    .newsletter .container {
        flex-direction: column;
        gap: 40px;
    }

    .newsletter__input {
        width: 500px;
    }

    .about .container {
        flex-direction: column-reverse;
    }

    .footer .container {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        gap: 30px;
        padding-inline: 30px;
    }
}

@media (max-width: 730px) {

    .header-nav {
        display: none;
    }

    .header-avatar {
        display: none;
    }

    .menu-toggle {
        display: block;
        background: none;
        font-size: 32px;
        cursor: pointer;
    }
}

@media (max-width: 592px) {

    .articles-title {
        font-size: 40px;
    }
}

@media (max-width: 536px) {

    .container {
        max-width: 500px;
    }

    .articles-grid {
        grid-template-columns: 1fr;
    }

    .newsletter__content {
        flex-direction: column;
    }
}

@media (max-width: 500px) {

    .container {
        width: 480px;
    }
    
    .newsletter__input {
        width: 400px;
    }
    
    .newsletter__button {
        position: static;
        display: block;
        margin: 20px auto;
    }

    .about .container {
        padding: 40px;
    }

    .about__title {
        font-size: 30px;
    }
}

@media (max-width: 480px) {
    
    .container {
        max-width: 460px;
    }

    .hero-content {
        gap: 5px;
    }

    .hero-btn {
        margin: 5px;
    }

    .articles-title {
        font-size: 30px;
    }

    .about__stats {
        margin: auto;
        text-align: center;
    }

    .about__button {
        margin: auto;
    }

    .footer .container {
        grid-template-columns: 1fr;
    }

    .footer__brand {
        margin: auto;
        text-align: center;
    }

    .footer__socials {
        margin: auto;
    }

    .footer__navigation {
        margin: auto;
        text-align: center;
    }

    .footer__categories {
        margin: auto;
        text-align: center;
    }

    .footer__heading {
        text-align: center;
    }
    
}

@media (max-width: 460px) {
    .container {
        max-width: 430px;
    }
}

@media (max-width: 430px) {
    .container {
        max-width: 400px;
    }

    .hero-title {
        font-size: 30px;
        width: 260px;
    }

    .newsletter__content {
        margin: auto;
        text-align: center;
        width: 50px;
    }
}
/* ... */

